--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,700italic,900,900italic&subset=latin,latin-ext'
         rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="CSS/main.css">
-    <link rel="stylesheet" href="CSS/themes.dark.css">
+    <link rel="stylesheet" href="CSS/">
 </head>
-
 <body>
     <div class="c-main-container  js-main-container">
         <section class="o-section o-section--header  t-section  t-section--header">
