colocando o veio pra girar
é literalmente o titulo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             width: 200px; /* Ajuste o tamanho conforme necessário */
             height: 200px; /* Ajuste o tamanho conforme necessário */
             transition: transform 3s ease-in-out;
-            background: url('https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcR2fUSCihCvkmpn3-9X8smfKykXAPeFbDjTC6uXe9Iw6Zy6HEeL') center center no-repeat ;
+            background: url('https://i.pinimg.com/736x/45/26/33/452633597bc60174d508daad739443d5.jpg') center center no-repeat ;
             background-size: cover;
             border-radius: 50%; /* Para tornar a imagem circular */
             display: none; /* Inicialmente oculta */
